[project]
name = "distributed-systems-lab"
version = "0.1.0"
description = "A WAL-based KV store, a Kafka-style log broker built on it, and a benchmarking CLI to measure both."
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
asyncio_mode = "auto"